<resources>
    <string name="app_name">SimpleNews</string>
    <string name="init_country">当前国家：None</string>
    <string name="init_province">当前省份：None</string>
    <string name="init_county">当前区市：None</string>
    <string name="current_country">当前国家：%s</string>
    <string name="current_province">当前省份：%s</string>
    <string name="current_county">当前区市：%s</string>
    <string name="choose_city">选择地区</string>
    <string name="choose_start">选择起始日期</string>
    <string name="to">to</string>
    <string name="choose_finish">选择终止日期</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>