<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/init_country"
        android:textColor="#909090"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"/>


    <TextView
        android:id="@+id/text_province"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_country"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/init_province"
        android:textColor="#909090"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:id="@+id/text_county"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_province"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/init_county"
        android:textColor="#909090"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_city"
        app:layout_constraintTop_toBottomOf="@id/text_county"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edit_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintBottom_toTopOf="@id/line_chart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_view"
        android:inputType="date"
        android:textAlignment="center"
        android:focusableInTouchMode="false"
        android:layout_marginBottom="10dp"
        android:hint="@string/choose_start"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintBottom_toTopOf="@id/line_chart"
        app:layout_constraintLeft_toRightOf="@id/edit_start"
        app:layout_constraintRight_toLeftOf="@id/edit_finish"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_start"
        android:textSize="20sp"
        android:textColor="#909090"
        android:text="@string/to"/>

    <EditText
        android:id="@+id/edit_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintBottom_toTopOf="@id/line_chart"
        app:layout_constraintLeft_toRightOf="@id/text_view"
        app:layout_constraintRight_toLeftOf="@id/spinner"
        android:inputType="date"
        android:textAlignment="center"
        android:focusableInTouchMode="false"
        android:layout_marginBottom="10dp"
        android:hint="@string/choose_finish"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintBottom_toTopOf="@id/line_chart"
        app:layout_constraintLeft_toRightOf="@id/edit_finish"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        android:padding="0dp"/>

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/line_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/edit_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>